# glossify

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
glossify/: cli.py
glossify/src/: parsing.py  templating.py
glossify/src/templates/: glossary_as_markdown_table.md
glossify/tests/: test_parsing.py  test_templating.py
glossify/tests/fixtures/domain/: an_entity.py  entities.py  entities_but_some_are_not_documented.py
src/: parsing.py  templating.py
src/templates/: glossary_as_markdown_list.md
tests/: test_parsing.py  test_templating.py
tests/fixtures/domain/: entities.py
