[project]
name = "glossify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.4",
    "typer>=0.12.5",
]

[dependency-groups]
dev = [
    "glossify",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
demo-app = "glossify.cli:main"
